--- a/styles/config/_helpers.scss
+++ b/styles/config/_helpers.scss
@@ -6,6 +6,6 @@
 }
 
 .separator{
-  margin: 45px 0 36px 0;
-
+  margin: 0 auto 0 auto;
+  width: 93%;
 }
