--- a/styles/modules/_intro.scss
+++ b/styles/modules/_intro.scss
@@ -9,7 +9,9 @@
   padding: 40px 20px;
 }
 
-.intro__wrapper{}
+.intro__wrapper{
+  padding: 0 0 45px 0;
+}
 
 .intro__content{
   text-align: center;
@@ -45,7 +47,7 @@
   }
 
   .intro__img{
-    height: 338px;
+    height: 328px;
   }
 
   .intro__content--margin{
@@ -62,11 +64,17 @@
   }
 
   .intro__wrapper{
-    padding: 0 40px;
+    padding: 0 40px 20px 0;
+  }
+
+  .intro--section{
+    padding: 58px 20px;
   }
 
   .intro__text{
     font-size: 1.8em;
+
+    margin-top: 26px;
   }
 
 }
